Slight change in Q1
+ +1000000 added to fix a little
+ Answer printing changed in Q1

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -440,8 +440,8 @@
      "data": {
       "text/plain": [
        "[(({'E'}, {'A', 'B'}), 1),\n",
-       " (({'B', 'E'}, {'A'}), 1),\n",
        " (({'A', 'E'}, {'B'}), 1),\n",
+       " (({'B', 'E'}, {'A'}), 1),\n",
        " (({'A', 'B'}, {'E'}), 1/2)]"
       ]
      },
@@ -619,7 +619,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'E'}, {'C'}, {'B'}, {'A'}]"
+       "[{'A'}, {'C'}, {'E'}, {'B'}]"
       ]
      },
      "execution_count": 24,
@@ -679,12 +679,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E', 'A'}\n",
       "{'C', 'A'}\n",
-      "{'B', 'A'}\n",
-      "{'E', 'C'}\n",
-      "{'E', 'B'}\n",
-      "{'C', 'B'}\n"
+      "{'C', 'E'}\n",
+      "{'C', 'B'}\n",
+      "{'E', 'A'}\n",
+      "{'A', 'B'}\n",
+      "{'E', 'B'}\n"
      ]
     }
    ],
@@ -732,12 +732,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E', 'A'}\n",
       "{'C', 'A'}\n",
-      "{'B', 'A'}\n",
-      "{'E', 'C'}\n",
-      "{'E', 'B'}\n",
-      "{'C', 'B'}\n"
+      "{'C', 'E'}\n",
+      "{'C', 'B'}\n",
+      "{'E', 'A'}\n",
+      "{'A', 'B'}\n",
+      "{'E', 'B'}\n"
      ]
     }
    ],
@@ -764,12 +764,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E', 'A'}\n",
       "{'C', 'A'}\n",
-      "{'B', 'A'}\n",
-      "{'E', 'C'}\n",
-      "{'E', 'B'}\n",
-      "{'C', 'B'}\n"
+      "{'C', 'E'}\n",
+      "{'C', 'B'}\n",
+      "{'E', 'A'}\n",
+      "{'A', 'B'}\n",
+      "{'E', 'B'}\n"
      ]
     }
    ],
@@ -818,10 +818,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E', 'C', 'B'}\n",
-      "{'E', 'C', 'A'}\n",
-      "{'A', 'E', 'B'}\n",
-      "{'A', 'C', 'B'}\n"
+      "{'C', 'A', 'E'}\n",
+      "{'C', 'A', 'B'}\n",
+      "{'E', 'A', 'B'}\n",
+      "{'C', 'E', 'B'}\n"
      ]
     }
    ],
@@ -839,10 +839,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E', 'C', 'B'}\n",
-      "{'E', 'C', 'A'}\n",
-      "{'A', 'E', 'B'}\n",
-      "{'A', 'C', 'B'}\n"
+      "{'C', 'A', 'E'}\n",
+      "{'C', 'A', 'B'}\n",
+      "{'E', 'A', 'B'}\n",
+      "{'C', 'E', 'B'}\n"
      ]
     }
    ],
@@ -861,10 +861,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'E', 'C', 'B'}\n",
-      "{'E', 'C', 'A'}\n",
-      "{'A', 'E', 'B'}\n",
-      "{'A', 'C', 'B'}\n"
+      "{'C', 'A', 'E'}\n",
+      "{'C', 'A', 'B'}\n",
+      "{'E', 'A', 'B'}\n",
+      "{'C', 'E', 'B'}\n"
      ]
     }
    ],
@@ -975,20 +975,20 @@
     {
      "data": {
       "text/plain": [
-       "[{'E'},\n",
+       "[{'A'},\n",
        " {'C'},\n",
+       " {'E'},\n",
        " {'B'},\n",
-       " {'A'},\n",
-       " {'A', 'E'},\n",
        " {'A', 'C'},\n",
-       " {'A', 'B'},\n",
        " {'C', 'E'},\n",
-       " {'B', 'E'},\n",
        " {'B', 'C'},\n",
-       " {'B', 'C', 'E'},\n",
+       " {'A', 'E'},\n",
+       " {'A', 'B'},\n",
+       " {'B', 'E'},\n",
        " {'A', 'C', 'E'},\n",
-       " {'A', 'B', 'E'},\n",
        " {'A', 'B', 'C'},\n",
+       " {'A', 'B', 'E'},\n",
+       " {'B', 'C', 'E'},\n",
        " {'A', 'B', 'C', 'E'}]"
       ]
      },
@@ -1041,21 +1041,21 @@
     {
      "data": {
       "text/plain": [
-       "[{'E'},\n",
-       " {'D'},\n",
+       "[{'A'},\n",
        " {'C'},\n",
+       " {'D'},\n",
+       " {'E'},\n",
        " {'B'},\n",
-       " {'A'},\n",
-       " {'A', 'E'},\n",
-       " {'C', 'E'},\n",
-       " {'B', 'E'},\n",
        " {'A', 'C'},\n",
+       " {'A', 'E'},\n",
        " {'A', 'B'},\n",
+       " {'C', 'E'},\n",
        " {'B', 'C'},\n",
-       " {'B', 'C', 'E'},\n",
+       " {'B', 'E'},\n",
        " {'A', 'C', 'E'},\n",
-       " {'A', 'B', 'E'},\n",
        " {'A', 'B', 'C'},\n",
+       " {'A', 'B', 'E'},\n",
+       " {'B', 'C', 'E'},\n",
        " {'A', 'B', 'C', 'E'}]"
       ]
      },
@@ -1084,29 +1084,29 @@
     {
      "data": {
       "text/plain": [
-       "[({'E'}, {'C'}),\n",
-       " ({'C'}, {'E'}),\n",
-       " ({'E'}, {'B'}),\n",
-       " ({'B'}, {'E'}),\n",
-       " ({'C'}, {'A'}),\n",
+       "[({'C'}, {'A'}),\n",
        " ({'A'}, {'C'}),\n",
+       " ({'C'}, {'E'}),\n",
+       " ({'E'}, {'C'}),\n",
        " ({'C'}, {'B'}),\n",
        " ({'B'}, {'C'}),\n",
-       " ({'E'}, {'B', 'C'}),\n",
-       " ({'C'}, {'B', 'E'}),\n",
-       " ({'B'}, {'C', 'E'}),\n",
-       " ({'C', 'E'}, {'B'}),\n",
-       " ({'B', 'E'}, {'C'}),\n",
-       " ({'B', 'C'}, {'E'}),\n",
+       " ({'E'}, {'B'}),\n",
+       " ({'B'}, {'E'}),\n",
        " ({'A', 'E'}, {'C'}),\n",
+       " ({'A', 'B'}, {'C'}),\n",
        " ({'A', 'E'}, {'B'}),\n",
        " ({'A', 'B'}, {'E'}),\n",
-       " ({'A', 'B'}, {'C'}),\n",
+       " ({'C'}, {'B', 'E'}),\n",
+       " ({'E'}, {'B', 'C'}),\n",
+       " ({'B'}, {'C', 'E'}),\n",
+       " ({'C', 'E'}, {'B'}),\n",
+       " ({'B', 'C'}, {'E'}),\n",
+       " ({'B', 'E'}, {'C'}),\n",
        " ({'A', 'E'}, {'B', 'C'}),\n",
        " ({'A', 'B'}, {'C', 'E'}),\n",
        " ({'A', 'C', 'E'}, {'B'}),\n",
-       " ({'A', 'B', 'E'}, {'C'}),\n",
-       " ({'A', 'B', 'C'}, {'E'})]"
+       " ({'A', 'B', 'C'}, {'E'}),\n",
+       " ({'A', 'B', 'E'}, {'C'})]"
       ]
      },
      "execution_count": 40,
@@ -1388,7 +1388,7 @@
    "source": [
     "def count_memory(n, m):\n",
     "    triangular = 2 * n * (n-1)\n",
-    "    triples_list = 12 * m\n",
+    "    triples_list = 12 * (m + 1000000)\n",
     "    \n",
     "    return min(triangular, triples_list)\n"
    ]
@@ -1402,15 +1402,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "N = 100000 \b; M = 100000000 \b; S = 1200000000\n"
+      "8.169934640522875\n",
+      "4.371584699453552\n",
+      "1.5432098765432098\n",
+      "0.9900990099009901\n",
+      "Answer: N = 100000 \b; M = 100000000 \b; S = 1200000000\n"
      ]
     }
    ],
    "source": [
     "for n, m, s in soln:\n",
     "    s_c = count_memory(n, m)\n",
+    "    \n",
+    "    print(s / s_c)\n",
+    "    \n",
     "    if s_c * 1.1 >= s >= s_c * .9:\n",
-    "        print('N =', n, '\\b; M =', m, '\\b; S =', s) "
+    "        print('Answer: N =', n, '\\b; M =', m, '\\b; S =', s) "
    ]
   },
   {
